--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">helper</string>
+    <string name="item_import">import contacts</string>
+    <string name="item_share">share</string>
 </resources>
